--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
   },
   "devDependencies": {
     "coveralls": ">=2.11.2",
+    "eslint-config-node": "^2.0.0",
     "istanbul": "~0.3.2",
     "mocha": "~1.21.4",
     "mocha-lcov-reporter": "0.0.1",
@@ -72,7 +73,7 @@
   },
   "main": "index.js",
   "engines": {
-    "node": ">=0.8.0"
+    "node": ">=8.9.0"
   },
   "scripts": {
     "test": "mocha tests",
